@@ -18,6 +18,7 @@ Main changes compared to openvas-scanner 6.0.1:
 * An issue which could have caused a truncated string in register_service()
   has been fixed.
 * Improve signal handling when update vhosts list.
+* Increase size of buffer for preferences to allow for up to 105K NVTs.
 
 openvas-scanner 6.0.1 (2019-07-17)
 
